@@ -1,5 +1,13 @@
 2001-03-09  Sam Steingold  <sds@gnu.org>
 
+	A Logical Pathnames bug fixed.
+	* pathname.d (host_diff): when HAS_HOST, push `:host' onto solutions
+	(device_diff): when HAS_DEVICE, push `:device' onto solutions
+	(translate_host): respect and expect `:host' in `subst'
+	(translate_device): respect and expect `:device' in `subst'
+
+2001-03-09  Sam Steingold  <sds@gnu.org>
+
 	* posix.lisp (sysinfo): Export structure accessors.
 
 2001-03-07  Bruno Haible  <haible@clisp.cons.org>
